# poet_model_distillation

./: README.md  pyproject.toml
src/distillation/: run.sh  teacher_distill.py  teacher_multi_generation.py
src/distillation/preparation/: prepare_first_sentence.py  prepare_keywords.py  prepare_shang_lian.py
src/pre_training/: build_packed_dataset.py  data_cleaning.py  ds_config.json  ds_zero3.json  pretrain.py  run.sh
src/utils/: convert_chinese_to_pinyin.py  extract_sentence.py  model_download.py  random_genre.py
