[project]
name = "poet_model_distillation"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ZiYueXuan", email = "671342610@qq.com"},
]
dependencies = [
    "pandas",
    "pypinyin",
    "torch>=2.10.0",
    "datasets"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
