[project]
name = "poet_model_distillation"
version = "0.1.0"
description = "一个轻量级的古典诗歌蒸馏模型"
authors = [
    {name = "ZiYueXuan", email = "671342610@qq.com"},
]

requires-python = "==3.12.*"

dependencies = [
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "accelerate>=0.30.0",
    "sentencepiece",
    "tokenizers>=0.15",
    "pandas",
    "tqdm",
    "pypinyin",
    "peft>=0.18.1"
]

readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
